@@ -1,3 +1,7 @@
+2006-03-15  Aaron Bockover  <aaron@abock.org>
+
+	* src/Client.cs: Added proxy server support (Michael Hutchinson)
+
 2005-12-24  Aaron Bockover  <aaron@aaronbock.net>
 
 	* sync-tree.sh: Added shell script to keep projects using this source
